core/testing/snapshots/functions/fn.snap
### TITLE ###
Single liners
### INPUT ###

foo = fn() 5
bar = fn(x) x * 2
quz = fn(x, y) x * y

foo().print()
bar(5).print()
quz(4, 10).print()
### STDOUT ###
5
10
40

### TITLE ###
Can copy built-in
### INPUT ###

foo = upper
"test".foo().print()
### STDOUT ###
TEST

### TITLE ###
Single line closure
### INPUT ###

foo = fn(b) a * b
a = 2
foo(10).print()
a = 5
foo(10).print()
### STDOUT ###
20
50

### TITLE ###
Block
### INPUT ###

foo = fn():
	return 5
bar = fn(x):
    out = x * 2
	return out
quz = fn(x, y):
	return x * y

foo().print()
bar(5).print()
quz(4, 10).print()
### STDOUT ###
5
10
40

### TITLE ###
Block closure
### INPUT ###

a = 2
foo = fn(x):
	return a * x

foo(5).print()

a = 5
foo(5).print()
### STDOUT ###
10
25

### TITLE ###
Block closure within fn
### INPUT ###

a = 2
foo = fn(x):
	a = 3
	return a * x

a = 4
foo(5).print()
a.print()
### STDOUT ###
15
4

### TITLE ###
Can print
### DESCRIPTION ###
TODO 2025-06-18: this test regressed, output should provide more signature information
### INPUT ###

foo = fn() 5
foo.print()
bar = fn(x, y) x * y
bar.print()
### STDOUT ###
<fn>
<fn>

### TITLE ###
Increment
### INPUT ###

c = 0
foo = fn() c++
for _ in range(10):
	foo()
print(c)
### STDOUT ###
10

### TITLE ###
Compound incr
### INPUT ###

c = 0
foo = fn() c += 2
for _ in range(10):
	foo()
print(c)
### STDOUT ###
20

### TITLE ###
Rad block lambda
### INPUT ###

a = { "name": "alex" }

name = json.name
rad a:
    fields name
    name:
        map fn(n) n.upper()
### STDOUT ###
name 
ALEX  

### TITLE ###
Rad block identifier
### INPUT ###

a = { "name": "alex" }

name = json.name
rad a:
    fields name
    name:
        map upper
### STDOUT ###
name 
ALEX  

### TITLE ###
Rad block block
### INPUT ###

a = { "name": "alex" }

name = json.name
rad a:
    fields name
    name:
        map fn(n):
            out = n.upper()
            return out
### STDOUT ###
name 
ALEX  

### TITLE ###
Block requires return
### INPUT ###

print(add(4, 5))
fn add(x, y):
	x + y
### STDOUT ###


### TITLE ###
Can return nothing
### INPUT ###

print(foo(4, 5), 2)
fn foo(x, y):
	return
### STDOUT ###
2

### TITLE ###
Escaping closure captures param
### INPUT ###

fn make_adder(n):
	return fn(x) x + n

add5 = make_adder(5)
add5(3).print()
add5(10).print()
### STDOUT ###
8
15

### TITLE ###
Escaping closure captures local
### INPUT ###

fn make_greeter(name):
	greeting = "Hello, " + name
	return fn() greeting

greet = make_greeter("world")
greet().print()
### STDOUT ###
Hello, world

### TITLE ###
Named inner closure returned
### INPUT ###

fn make_greeter_fn(prefix):
	fn greet(name):
		return prefix + " " + name
	return greet

hi = make_greeter_fn("Hi")
hi("Alice").print()
hi("Bob").print()
### STDOUT ###
Hi Alice
Hi Bob

### TITLE ###
Closure passed as callback
### INPUT ###

fn apply(f, x):
	return f(x)

fn make_multiplier(n):
	return fn(x) x * n

double = make_multiplier(2)
apply(double, 7).print()
### STDOUT ###
14

### TITLE ###
Compound capture from nested scopes
### INPUT ###

fn outer(a):
	b = a * 10
	fn inner(c):
		return fn() a + b + c
	return inner

f = outer(3)
g = f(7)
g().print()
### STDOUT ###
40

### TITLE ###
Escaping closure in list
### INPUT ###

fn make_pair(x, y):
	return [fn() x, fn() y]

pair = make_pair("hello", "world")
first = pair[0]
second = pair[1]
first().print()
second().print()
### STDOUT ###
hello
world

### TITLE ###
Void in arithmetic
### INPUT ###
fn f():
	pass
f() + 1
### STDERR ###
error[RAD20038]: Cannot use void value in expression
  --> <script>:3:1
  |
2 | 	pass
3 | f() + 1
  | ^^^
  |
   = info: rad explain RAD20038


### EXIT ###
1
### TITLE ###
Void in comparison
### INPUT ###
fn f():
	pass
f() == null
### STDERR ###
error[RAD20038]: Cannot use void value in expression
  --> <script>:3:1
  |
2 | 	pass
3 | f() == null
  | ^^^
  |
   = info: rad explain RAD20038


### EXIT ###
1
### TITLE ###
Void in string interpolation
### INPUT ###
fn f():
	pass
print("{f()}")
### STDERR ###
error[RAD20038]: Cannot use void value in expression
  --> <script>:3:9
  |
2 | 	pass
3 | print("{f()}")
  |         ^^^
  |
   = info: rad explain RAD20038


### EXIT ###
1
### TITLE ###
Void in switch
### INPUT ###
fn f():
	pass
switch f():
	case 1 -> print("one")
### STDERR ###
error[RAD20038]: Cannot use void value in expression
  --> <script>:3:8
  |
2 | 	pass
3 | switch f():
  |        ^^^
4 | 	case 1 -> print("one")
  |
   = info: rad explain RAD20038


### EXIT ###
1
### TITLE ###
Void in unary negation
### INPUT ###
fn f():
	pass
-f()
### STDERR ###
error[RAD20038]: Cannot use void value in expression
  --> <script>:3:2
  |
2 | 	pass
3 | -f()
  |  ^^^
  |
   = info: rad explain RAD20038


### EXIT ###
1
